# corepc

./: Cargo.toml  justfile  x.txt
.github/workflows/: README.md  rust.yaml
bitcoind/src/: lib.rs
bitreq/: Cargo.toml
bitreq/src/: connection.rs  url.rs
bitreq/src/connection/: rustls_stream.rs
bitreq/tests/: setup.rs
client/: Cargo.toml
contrib/: fmt-integration-tests.sh  fmt-verify.sh  lint-integration-tests.sh  lint-verify.sh  update-lock-files.sh
core_tests/: README.md
electrsd/: Cargo.toml  build.rs
electrsd/src/: ext.rs  lib.rs  versions.rs
integration_test/tests/: blockchain_core.rs  control_core.rs  hidden.rs  mining_core.rs  network_core.rs  raw_transactions_core.rs  util_core.rs  wallet_core.rs
node/: Cargo.toml  build.rs
node/src/: lib.rs  versions.rs
spec_compare/: README.md
spec_compare/specs/: v24_2_0_openrpc.json  v25_2_0_openrpc.json  v26_2_0_openrpc.json  v27_2_0_openrpc.json  v28_3_0_openrpc.json  v29_3_0_openrpc.json  v30_2_0_openrpc.json  v30_2_0_openrpc_OLD_INVALID.json  validate.sh
