[package]
name = "electrsd"
version = "0.37.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
description = "Utility to run a regtest electrs process, useful in integration testing environment"
repository = "https://github.com/rust-bitcoin/corepc"
documentation = "https://docs.rs/elecrtsd/"
license = "MIT"
edition = "2021"
rust-version = "1.75.0"
categories = ["cryptography::cryptocurrencies", "development-tools::testing"]
exclude = ["tests", "contrib"]

[dependencies]
bitcoind = { version = "0.37.0", path = "../bitcoind" }
corepc-client = { version = "0.12.0", path = "../client" }
electrum-client = { version = "0.24.0", default-features = false }
log = { version = "0.4" }

[target.'cfg(not(windows))'.dependencies]
nix = { version = "0.25.0" }

[dev-dependencies]
env_logger = { version = "0.10" }

[build-dependencies]
bitcoin_hashes = { version = "0.14", optional = true }
zip = { version = "0.6", default-features = false, optional = true, features = [
  "bzip2",
  "deflate",
] }
bitreq = { version = "0.3.4", path = "../bitreq", default-features = false, optional = true, features = [
  "https",
  "std"
] }

[features]
default = ["electrs_0_8_10"]
legacy = []

# download is not supposed to be used directly only through selecting one of the version feature
download = ["bitcoin_hashes", "zip", "bitreq"]

# On --all-features it selects 0.8.10.
electrs_0_8_10 = ["electrs_0_9_1"]
electrs_0_9_1 = ["electrs_0_9_11"]
electrs_0_9_11 = ["electrs_0_10_6"]
electrs_0_10_6 = ["download"]
# esplora is a separate fork lineage, not part of the chain.
esplora_a33e97e1 = ["download", "legacy"]

bitcoind_30_2 = ["bitcoind/download", "bitcoind/30_2"]
bitcoind_29_0 = ["bitcoind/download", "bitcoind/29_0"]
bitcoind_28_2 = ["bitcoind/download", "bitcoind/28_2"]
bitcoind_27_2 = ["bitcoind/download", "bitcoind/27_2"]
bitcoind_26_2 = ["bitcoind/download", "bitcoind/26_2"]
bitcoind_25_2 = ["bitcoind/download", "bitcoind/25_2"]
bitcoind_24_2 = ["bitcoind/download", "bitcoind/24_2"]
bitcoind_23_1 = ["bitcoind/download", "bitcoind/23_2"]
bitcoind_22_1 = ["bitcoind/download", "bitcoind/22_1"]
bitcoind_0_21_2 = ["bitcoind/download", "bitcoind/0_21_2"]
bitcoind_0_20_2 = ["bitcoind/download", "bitcoind/0_20_2"]
bitcoind_0_19_1 = ["bitcoind/download", "bitcoind/0_19_1"]
bitcoind_0_18_1 = ["bitcoind/download", "bitcoind/0_18_1"]
bitcoind_0_17_2 = ["bitcoind/download", "bitcoind/0_17_2"]

[package.metadata.rbmt.lint]
# The electrsd crate requires a version feature to compile
features = ["electrs_0_8_10"]
# Duplicates from build-dep/dep splits, --target=all, or upstream version conflicts.
allowed_duplicates = [
    "anyhow",           # build-dep and regular dep, same version
    "base64",           # upstream version conflicts
    "bitcoin_hashes",   # build-dep (download) and transitive dep, same version
    "bitflags",         # upstream version conflicts
    "bitreq",           # build-dep (download) and regular dep, same version
    "libc",             # same version, appears twice under --target=all
    "linux-raw-sys",    # same version, appears twice under --target=all
    "rustix",           # same version, appears twice under --target=all
    "windows-sys",      # upstream version conflicts
]
